--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,4 +58,7 @@ dependencies {
     implementation 'android.arch.lifecycle:runtime:1.1.1'
     implementation 'com.android.support:design:27.1.1'
     api 'com.gonghui.screen:screen-adaptation:1.0'
+
+    api 'com.google.dagger:dagger:2.16'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.16'
 }
